--- a/saversproject/board/templates/board/write.html
+++ b/saversproject/board/templates/board/write.html
@@ -2,40 +2,61 @@
 {%load staticfiles%}
 {%block content%}
     <link rel="stylesheet" href="{%static 'main/css/layout/board.css'%}">
-        <h1>Question</h1>
-        <form>
-            <div class="first">
-                <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Title</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" placeholder=""></div>
-                    </div>
-                </div>
-            </form>
-            <form>
-                <div class="form-group">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-            </form>
-            <div class="input-group mb-3">
-                <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="inputGroupFile02">
-                        <label
-                            class="custom-file-label"
-                            for="inputGroupFile02"
-                            aria-describedby="inputGroupFileAddon02">Choose file</label>
-                    </div>
-                    <div class="input-group-append">
-                        <span class="input-group-text" id="inputGroupFileAddon02">Upload</span>
-                    </div>
-                </div>
-                <form>
-                    <div class="form-group">
-                        <input type="file" class="form-control-file" id="exampleFormControlFile1"></div>
-                    </form>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+            <!-- Q&A 또는 공지사항이나오게 -->
+            <h1>Question</h1>
+            <!-- board_title쓰는 칸 -->
+            <!-- title -->
+            <div class="write_container">
+                <div class="first">
                     <form>
-                        <button type="button" value="Go back!" onclick="history.back()">Back</button>
+                        <div class="form-group row">
+                            <div class="wtitle">
+                                <label for="inputEmail3" class="col-sm-2 col-form-label">title</label>
+                            </div>
+                            <!-- title의 내용쓰는 칸 -->
+                            <div class="col-sm-10">
+                                <div class="etitle">
+                                    <input
+                                        type="text"
+                                        class="form-control  form-control-lg"
+                                        id="inputEmail3"
+                                        placeholder="title"></div>
+                                </div>
+                            </div>
+                        
+                    </div>
+                    <!-- 내용쓰는 칸 -->
+                    <!-- content -->
+                    
+                        <div class="content_group">
+                        <div class="form-group row">
+                            <div class="rtitle">
+                                <label for="inputEmail3" class="col-sm-2 col-form-label">content</label>
+                            </div>
+                        </div>
+                        <!-- content의 내용쓰는 칸 -->
+                        
+                        <div class="form-group">
+                            <textarea
+                                class="form-control"
+                                id="exampleFormControlTextarea1"
+                                rows="15"
+                                cols="40"></textarea>
+                                <br><br>
+                            <div class="submit">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a href="{%url 'board'%}" class="btn btn-primary">Back</a>
+                        </div>
+                        </div>
+                        </div>
+                        <!-- 제출버튼, 뒤로가기버튼 -->
+                        
                     </form>
-
-                    {%endblock%}
+                </div>
+            
+            {%endblock%}
