--- a/saversproject/board/templates/board/board.html
+++ b/saversproject/board/templates/board/board.html
@@ -26,16 +26,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <a href="{%url 'detail'%}">
-                        <tr>
-                            
+                        
+                           <tr>
                             <th scope="row" width="12%">NOTICE</th>
-                            <td>Save earth</td>
+                            <td><a href="{%url 'detail'%}">Save earth</td></a>
                             <td>hye ji</td>
                             <td>2019.07.16</td>
                             <td>20</td>
-                            
                         </tr>
+                       </div>
                         </a>
                         <tr>
                             <th scope="row" width="12%">1</th>
