--- a/saversproject/board/templates/board/detail.html
+++ b/saversproject/board/templates/board/detail.html
@@ -2,5 +2,67 @@
 {%load staticfiles%}
 {%block content%}
     <link rel="stylesheet" href="{%static 'main/css/layout/board.css'%}">
-
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
+    <h1>Question</h1>
+            <!-- board_title쓰는 칸 -->
+            <!-- title -->
+            <div class="write_container">
+                <div class="first">
+                    <form>
+                        <div class="form-group row">
+                            <div class="wtitle">
+                                <label for="inputEmail3" class="col-sm-2 col-form-label">title</label>
+                            </div>
+                            <!-- title의 내용쓰는 칸 -->
+                            <div class="col-sm-10">
+                                <div class="etitle">
+                                    <input
+                                        type="text"
+                                        class="form-control  form-control-lg"
+                                        id="inputEmail3"
+                                        placeholder="title"></div>
+                                </div>
+                            </div>
+                        
+                    </div>
+                    <!-- 내용쓰는 칸 -->
+                    <!-- content -->
+                    
+                        <div class="content_group">
+                        <div class="form-group row">
+                            <div class="rtitle">
+                                <label for="inputEmail3" class="col-sm-2 col-form-label">content</label>
+                            </div>
+                        </div>
+                        <!-- content의 내용쓰는 칸 -->
+                        
+                        <div class="form-group">
+                            <textarea
+                                class="form-control"
+                                id="exampleFormControlTextarea1"
+                                rows="15"
+                                cols="40"></textarea>
+                                <br><br>
+                        </div>
+                        </div>
+                        <h2>Answer</h2>
+                        <div class="answer">
+                                <div class="form-group">
+                                        <textarea
+                                            class="form-control"
+                                            id="exampleFormControlTextarea1"
+                                            rows="15"
+                                            cols="20"></textarea>
+                                            <br><br>
+                                    </div>
+                        </div>
+                    </form>
+                    <div class="back">
+                            <a href="{%url 'board'%}" class="btn btn-primary">Back</a>
+                            </div>
+                </div>
 {%endblock%}
